# BitVector

./: CMakeLists.txt
include/: bitVector.h
src/: bitVector.c
tests/: test_bitVector.c
